build_log_restore_2.txt
> Task :clean

> Task :compileJava FAILED
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\JdbcChatMemoryConfig.java:3: error: package org.springframework.ai.chat.memory.jdbc does not exist
import org.springframework.ai.chat.memory.jdbc.JdbcChatMemory;
                                              ^
C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\JdbcChatMemoryConfig.java:21: error: cannot find symbol
        return new JdbcChatMemory(jdbcTemplate);
                   ^
  symbol:   class JdbcChatMemory
  location: class JdbcChatMemoryConfig
2 errors

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/bokducke/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\JdbcChatMemoryConfig.java:21: error: cannot find symbol
          return new JdbcChatMemory(jdbcTemplate);
                     ^
    symbol:   class JdbcChatMemory
    location: class JdbcChatMemoryConfig
  C:\Users\SSAFY\Desktop\bokducke\src\main\java\ssafy\bokduck\config\JdbcChatMemoryConfig.java:3: error: package org.springframework.ai.chat.memory.jdbc does not exist
  import org.springframework.ai.chat.memory.jdbc.JdbcChatMemory;
                                                ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
2 actionable tasks: 2 executed
